[package]
name = "rbx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "*"
glam = "*"
rayon = "*"
ron = "*"
softbuffer = { git = "https://github.com/rust-windowing/softbuffer" }
winit = "*"
